[gd_scene load_steps=8 format=3 uid="uid://br8oe4nkjvw6e"]

[ext_resource type="Script" path="res://Prog52a.gd" id="1_g12qu"]

[sub_resource type="LabelSettings" id="LabelSettings_cwiyp"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_oaqv5"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_x4rus"]
font_size = 32

[sub_resource type="Theme" id="Theme_5cvfx"]
default_font_size = 25

[sub_resource type="Theme" id="Theme_dxmo7"]
default_font_size = 25

[sub_resource type="Theme" id="Theme_p88xp"]
default_font_size = 25

[node name="Prog52a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g12qu")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 4.0
offset_right = 300.0
offset_bottom = 105.0
text = "Length:"
label_settings = SubResource("LabelSettings_cwiyp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = -12.0
offset_top = 92.0
offset_right = 322.0
offset_bottom = 215.0
text = "Width:"
label_settings = SubResource("LabelSettings_oaqv5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 26.0
offset_right = 539.0
offset_bottom = 85.0

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 284.0
offset_top = 118.0
offset_right = 535.0
offset_bottom = 175.0

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 606.0
offset_top = 12.0
offset_right = 1112.0
offset_bottom = 125.0
text = "Area:"
label_settings = SubResource("LabelSettings_x4rus")

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 592.0
offset_top = 132.0
offset_right = 1098.0
offset_bottom = 245.0
text = "Perimeter:"
label_settings = SubResource("LabelSettings_x4rus")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 46.0
offset_top = 420.0
offset_right = 246.0
offset_bottom = 562.0
theme = SubResource("Theme_5cvfx")
text = "Calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 486.0
offset_top = 414.0
offset_right = 686.0
offset_bottom = 556.0
theme = SubResource("Theme_dxmo7")
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 880.0
offset_top = 408.0
offset_right = 1080.0
offset_bottom = 550.0
theme = SubResource("Theme_p88xp")
text = "Exit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
